--- a/src/markdown.css
+++ b/src/markdown.css
@@ -63,7 +63,7 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05 overflow-scroll;
 }
 
 .markdown pre {
@@ -71,7 +71,7 @@
 }
 
 .markdown pre code {
-  @apply block bg-transparent p-0 overflow-visible rounded-none overflow-scroll scrollbar-none;
+  @apply block bg-transparent p-0 overflow-visible rounded-none;
 }
 
 .markdown ul {
